# DiscordPepperPL

./: .gitignore  =0.3.17  README.md  bot.py  pyproject.toml  requirements.txt
cogs/: pepper.py
migrations/: migration_001_category_system.sql  rollback_001_category_system.sql
utils/: alerts.py  category_manager.py  config.py  db.py  scraper.py  views.py
